# nextcloud-powertools

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  policy.xml  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: register-webhooks.sh
specs/: ARCHITECTURE.md  CONTEXT.md  DEMO.md  DEVELOPER_BRIEF.md  FEATURE_REQUESTS.md  PLAN.md
src/ncpowertools/: __init__.py  __main__.py  cli.py  config.py  errors.py  immich.py  locking.py  logging.py  models.py  pipeline.py  poller.py  shred.py  webhook.py
src/ncpowertools/handlers/: __init__.py  archives.py  base.py  compress.py  render.py
src/ncpowertools/nextcloud/: __init__.py  client.py  webdav_xml.py
tests/: conftest.py  test_client.py  test_config.py  test_handlers_archives.py  test_handlers_compress.py  test_handlers_render.py  test_immich.py  test_pipeline.py  test_shred.py  test_smoke.py  test_webhook.py
