[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncpowertools"
version = "0.1.0"
description = "Isolated Dockerized worker that performs file operations on Nextcloud files via WebDAV/OCS when a user tags them."
# readme = "README.md"  # re-enable in M4 once README.md exists
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Liran Koren", email = "lirankoren@gmail.com" }]
dependencies = [
    "httpx==0.28.1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "lxml==5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "respx==0.22.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "lxml-stubs==0.5.1",
]

[project.scripts]
ncpowertools = "ncpowertools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
